--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -1,10 +1,65 @@
+.login {
+  background-color: var(--bgColor);
+  color: whitesmoke;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 100px;
+}
+
 .loginContainer {
-    min-width: 250px;
-    max-width: 350px;
-    /* background-color: aliceblue; */
-    border: 0.5px solid black;
-    border-radius: 6px;
-    margin: 50px auto;
-    padding: 20px;
-    box-shadow: 5px 5px 10px 10px aliceblue;
+  min-width: 300px;
+  max-width: 300px;
+  min-height: max-content;
+  max-height: auto;
+}
+
+.bottomLine {
+  position: relative;
+  text-align: center;
+  padding: 15px 8px 15px 13px;
+}
+
+.bottomLine p {
+  font-size: 13px;
+  padding: 5px 10px;
+  color: grey;
+  z-index: 2;
+  position: relative;
+  display: inline-block;
+  background-color: var(--bgColor);
+}
+
+.bottomLine::after {
+  content: "";
+  display: block;
+  position: absolute;
+  padding: 0px;
+  bottom: 45%;
+  /* left: 15px; */
+  height: 1px;
+  width: 100%;
+  border-top: 1px solid grey;
+  background-color: transparent;
+  z-index: 1;
+}
+
+
+.bottomLink{
+    text-decoration: none;
+    width: 100%;
+    text-align: center;
+    font-size: 14px;
+    padding: 10px;
+    /* border: 1px solid black; */
+    cursor: pointer;
+    margin: 0px 10px;
+    box-shadow: 2px 2px 5px black;
+}
+
+.bottomLink a{
+    color: whitesmoke;
+    text-decoration: none;
 }
