--- a/client/src/components/Category/Category.css
+++ b/client/src/components/Category/Category.css
@@ -9,13 +9,26 @@
     flex-direction: column;
     justify-content: space-between;
     gap: 5px;
+    cursor: pointer;
 }
-.Category > img{
+.Category__imageContainer{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+.Category__single {
     margin-top: auto;
     width: 100%;
     height: auto;
     /* aspect-ratio: 8/9; */
     object-fit:cover ;
+}
+.Category__multiple{
+ width: calc(50% - 10px);
+ aspect-ratio: 1/1;
+ margin: 5px;
+ object-fit: cover;
 }
 .Category > p{
     height: 20px;
