--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -4,9 +4,9 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  /* align-items: center; */
+  /* flex-direction: column; */
+  justify-content: space-around;
+  align-items: center;
   padding: 100px;
 }
 
@@ -66,17 +66,44 @@
 }
 
 
-/* .animationDiv{
-  background-color: red;
+.animationDiv{
+  background-color: transparent;
   height: 300px;
-  width: 300px;
-  /* animation: jayant 4s cubic-bezier(0.175, 0.885, 0.32, 1.275) 1s infinite; */
-  animation: name duration timing-function delay iteration-count direction fill-mode;
+  width: 200px;
+  
+  animation: jayant 3s ease infinite;
+}
+
+.sideImg{
+  background-color: transparent;
+  height: 300px;
+  width: 200px;
+}
+
+.animationDiv2{
+  animation: jayant1 1s ease forwards;
+}
+
+.animationDiv{
+  animation: jayant 2s ease infinite;
+}
+
+.sideImg img{
+  height: 100%;
+  width: 100%;
+  object-position: center;
+  object-fit: cover;
+}
+
+@keyframes jayant1{
+  to{
+    transform: translateY(-550px);
+  }
 }
 
 @keyframes jayant {
   50%{
-    transform: translate(-400px, -400px) rotate(360deg);
-    background-color: blue;
+    transform:  translateY(-50px);
+    /* background-color: blue */
   }
-} */
+}
