--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -3,13 +3,21 @@
     width: 100%;
     padding: 10px;
     display: flex;
-    background-color: var(--bgColor);
+    /* background-color: white; */
+    background: linear-gradient(to right,#111,#111,#03001C,rgba(48, 30, 103, 0.5),#03001C,#111,#111);
+    /* background: linear-gradient(to right,#111,#111,#03001C,#2D033B,#03001C,#111,#111); */
+    background-size: 200%;
+    background-position: left;
     color: whitesmoke;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2) ;
     transition: .4s;
     position: sticky;
     top: 0;
     z-index: 9;
+    animation: header_bg 15s  ease infinite;
+}
+@keyframes header_bg {
+    50%{background-position: right;}
 }
 .Header > div{
     height: 100%;
