--- a/client/src/components/Input/Input.css
+++ b/client/src/components/Input/Input.css
@@ -7,14 +7,14 @@
   position: relative;
 }
 
-input::placeholder {
+.loginInput::placeholder {
   position: absolute;
   transition: 0.2s;
   font-size: 12px;
   bottom: 10px;
 }
 
-.inputContainer input {
+.inputContainer .loginInput {
   background-color: var(--bgColor);
   width: 300px;
   outline: none;
@@ -25,7 +25,6 @@ input::placeholder {
   /* border-radius: 5px; */
 }
 
-input:focus::placeholder{
-    bottom: 70%;
+.loginInput:focus::placeholder {
+  bottom: 70%;
 }
-
