--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -2,6 +2,7 @@
     min-height: 100vh;
     width: 100%;
     background-color: var(--bgColor);
+    max-width: 1920px;
 }
 .Categories__container{
     position: relative;
