--- a/client/src/pages/CategoryPage/CategoryPage.css
+++ b/client/src/pages/CategoryPage/CategoryPage.css
@@ -2,4 +2,18 @@
     min-height: 100vh;
     width: 100%;
     background-color: var(--bgColor);
+    display: flex;
+}
+.CategoryPage__filterSection{
+    position: static;
+    min-width: 300px;
+    height: 100vh;
+    background-color: whitesmoke;
+}
+.CategoryPage__productContainer{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+    flex-grow: 1;
 }
