--- a/client/src/components/Category/Category.css
+++ b/client/src/components/Category/Category.css
@@ -10,6 +10,7 @@
     justify-content: space-between;
     gap: 5px;
     cursor: pointer;
+    flex-grow: 1;
 }
 .Category__imageContainer{
     width: 100%;
