--- a/client/src/components/Product/Product.css
+++ b/client/src/components/Product/Product.css
@@ -1,4 +1,85 @@
-.Product{
-    padding: 20px;
-    background-color: whitesmoke;
+.Product {
+  /* padding: 20px; */
+  background-color: whitesmoke;
+  display: flex;
+  /* flex-wrap: wrap; */
+  align-items: center;
+  justify-content: left;
+}
+
+.imageContainer {
+  max-width: 250px;
+  max-height: 250px;
+  text-align: center;
+  padding: 20px;
+  cursor: pointer;
+}
+
+.imageContainer > img {
+  width: 90%;
+  /* height: 75%; */
+  aspect-ratio: 1/1;
+  object-fit: contain;
+}
+
+.detailsContainer {
+  padding: 20px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.detailsContainer .title {
+  cursor: pointer;
+}
+
+.detailsContainer .title > span {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.price {
+  font-size: 18px;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+.price > del {
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.price > span {
+  margin-right: 8px;
+  margin-left: 8px;
+}
+
+.price .discount {
+  font-size: 15px;
+  font-weight: 100;
+}
+
+.ratings {
+  margin-top: 10px;
+  font-size: 16px;
+  background-color: lightgray;
+  max-width: max-content;
+  padding: 10px;
+  border-radius: 8px;
+}
+
+.ratings > span {
+  color: rgb(255, 187, 0);
+}
+
+.cartButton {
+  padding: 10px 18px;
+  margin: 20px 0px;
+  border-radius: 6px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  border: none;
+  outline: none;
+  background-color: rgb(255, 187, 0);
+  cursor: pointer;
+  /* box-shadow: 2px 2px 2px rgb(255, 187, 0); */
 }
